# Ocean-Simulator-Application

./: CMakeLists.txt  README.md
Capsize Prevention Software/: CMakeLists.txt  main.cpp
Capsize Prevention Software/GLSL/SHADER/: simplecolor.frag
Capsize Prevention Software/Header Files/: 3Dmath.h  application.h  dds.h  geometryutils.h  gl4ext.h  glextensions.h  orderedarray.hpp  spectatorcamera.h  terrainquadtree.h  win32application.h
Capsize Prevention Software/src/: 3Dmath.cpp  application.cpp  dds.cpp  fft_test.cpp  geometryutils.cpp  gl4ext.cpp  glextensions.cpp  spectatorcamera.cpp  terrainquadtree.cpp  win32application.cpp
Dependencies/OpenGL/: glext.h
Simulator/: CMakeLists.txt  main.cpp
Simulator/GLSL/SHADER/: screenquad.frag  screenquad.vert  sky.frag  sky.vert
Simulator/Header Files/: 3Dmath.h  application.h  dds.h  geometryutils.h  gl4ext.h  glextensions.h  orderedarray.hpp  spectatorcamera.h  terrainquadtree.h  win32application.h
Simulator/src/: 3Dmath.cpp  application.cpp  dds.cpp  fft_test.cpp  geometryutils.cpp  gl4ext.cpp  glextensions.cpp  spectatorcamera.cpp  terrainquadtree.cpp  win32application.cpp
